Heros TypeScriptStore Simple firts Commit meta image

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,21 @@
       prefer
       src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"
     ></script>
+
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://lennon182.github.io/" />
+    <meta
+      property="og:title"
+      content="TypeScript Simple Shopping Cart | E. Iván Mtz. Leal."
+    />
+    <meta
+      property="og:description"
+      content="This is a simple App made in Typescript, HTML5 and Css. It Simulate a Store where you can buy comics through a Simple Shopping Cart."
+    />
+    <meta
+      property="og:image"
+      content="https://lennon182.github.io/assets/images/typescriptsimpleshoppingcart.png"
+    />
   </head>
   <body>
     <!-- SECOND HEADER -->
