adding Github Link

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,15 @@
 
       <section class="repository">
         <ion-icon class="github" name="logo-github" size="small"></ion-icon>
-        <span class="social-name"> GitRepository </span>
+        <span class="social-name">
+          <a
+            href="https://github.com/lennon182/TypeScript-SimpleShoppingCart"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            GitRepository
+          </a>
+        </span>
       </section>
     </header>
     <!-- MAIN HEADER -->
